test/error/badtablecreate.luau
table.create(-1, "test")